fix: gate type-index completion on JPMS readability, not observability (CQ-0049, EG-024)
Type-index completion offered types from modules the current module does not
read - e.g. javax.swing.JButton (java.desktop) in a module without
`requires java.desktop`. Accepting such a candidate produces a not-visible
compile error, so these were invalid candidates.

Root cause: the type-index paths gated candidates on
`Elements.getTypeElement(qn) != null`, which only proves the type is
*observable* in the module graph and ignores whether the current module *reads*
the type's module. The member-access (CandidateGenerator) and import
(ImportCompletionProvider) paths already gate on `Trees.isAccessible(scope,
type)`; the two type-index paths were the only ones skipping it.

Two leak sites, both now gated on Trees.isAccessible with the completion Scope
and a permissive fallback when no scope/analysis is available:
- TypeIndexValidator (plain type-reference via
  TypeReferenceCompleter.completeSimpleNameTypeReference, and static-member-fit
  via CompletionEngine.staticMemberFitCandidates) - the validator now takes the
  Scope and enforces readability; its misleading "getTypeElement follows JPMS
  semantics" Javadoc is corrected.
- TypeReferenceCompleter.resolvesToInstantiableSubtype (the new-expression /
  expected-type constructor-subtype path, which never used the validator) - the
  Scope is threaded through instantiableSubtypeCandidates and the same gate
  applied. This second site was found by a live probe on dob-core after the
  first fix; the original test only exercised the plain-reference form.

Also convert the raw NUL byte in completionIdentity's format string to its
unicode-escape form (byte-identical to the compiler) so the file is no longer
treated as binary by git and grep.

Tests (CompletionTypeIndexTest): enable the previously @Disabled
typeIndex_jpmsObservableButUnreadableModule_doesNotSuggestIndexedType; add a
constructor-subtype unreadable case plus a readable-su